Fix grid-3 alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,42 +263,41 @@ figcaption {
   transform: rotate(-20deg);
 }
 
-.book-container{
+.book-container {
   height: 300px;
   padding-top: 30px;
   background: linear-gradient(to bottom left, lightgrey, grey);
   display: flex;
 }
 
-.book-text-container{
+.book-text-container {
   width: 60%;
   margin-left: 10%;
 }
 
-.book-image-container{
+.book-image-container {
   position: relative;
   width: 25%;
 }
 
-#book-image{
+#book-image {
   position: absolute;
-  bottom:5%;
+  bottom: 5%;
   transform: rotate(-20deg);
 }
 
-#book-image:hover{
+#book-image:hover {
   transform: rotate(0deg);
 }
 
-.grid-3{
-  background-color: yellow;
-  margin-top: 400px;
+.grid-3 {
+  padding: 40px 70px 20px 30px;
   display: grid;
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: repeat(2, 45%);
   grid-template-rows: repeat(2, auto);
   justify-content: space-around;
 }
 
-.background-linear-grey{
+.background-linear-grey {
   background: linear-gradient(to bottom left, lightgrey, grey);
 }
